Update from CodePicnic

--- a/README.rdoc
+++ b/README.rdoc
@@ -3,7 +3,7 @@
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
-Edited from CodePicnic
+Edited from CodePicnic. Test.
 
 Things you may want to cover:
 
