--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 I. SUBIENDO ARCHIVOS AL SERVIDOR
-  ` git add . ` 
-  ` git commit -am "UN MENSAJE"
+  `git add .`
+  `git commit -am "UN MENSAJE"`
   
   A GitHub (red social nerd)
   ` git push origin master`
@@ -33,9 +33,7 @@ URL:  domain.com/some/middle/search?terms=banana&category=books&author=JKBanowli
  
  
  
- 
- 
  NUNCA HACER ESTO
  
 4. Resetear: 
-  `git reset IDENTIFIER --hard`
+  `git reset IDENTIFIER --hard`I. SUBIENDO ARCHIVOS AL SERVIDOR
